tests/parsing/smtlib/v2.7/errors/120_sort_open_wait_1.smt2
(set-logic ALL)
(declare-const foo (!))
